--- a/SystemA/pom.xml
+++ b/SystemA/pom.xml
@@ -7,30 +7,83 @@
     <groupId>org.example</groupId>
     <artifactId>SystemA</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+            <java.version>1.8</java.version>
+            <logback.version>1.2.1</logback.version>
+            <emoji-java.version>3.1.3</emoji-java.version>
+            <opencsv.version>3.9</opencsv.version>
+            <mysql-connector-java.version>6.0.6</mysql-connector-java.version>
+            <mssql-jdbc.version>8.4.1.jre8</mssql-jdbc.version>
+            <dom4j.version>2.1.3</dom4j.version>
+            <spring-security-core.version>5.1.11.RELEASE</spring-security-core.version>
+            <jaxen.version>1.1.6</jaxen.version>
+            <saxpath.version>1.0-FCS</saxpath.version>
+            <pinyin4j.version>2.5.1</pinyin4j.version>
     </properties>
 <dependencies>
-    <dependency>
-        <groupId>dom4j</groupId>
-        <artifactId>dom4j</artifactId>
-        <version>1.6.1</version>
-    </dependency>
     <!--HttpClient-->
     <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
         <version>3.1</version>
     </dependency>
-
-    <!--fastjson-->
     <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>fastjson</artifactId>
         <version>1.2.32</version>
     </dependency>
+    <dependency>
+        <groupId>com.jfoenix</groupId>
+        <artifactId>jfoenix</artifactId>
+        <version>8.0.10</version>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.vdurmont</groupId>
+        <artifactId>emoji-java</artifactId>
+        <version>${emoji-java.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>${opencsv.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.dom4j</groupId>
+        <artifactId>dom4j</artifactId>
+        <version>${dom4j.version}</version>
+    </dependency>
 
+    <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security-core.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>jaxen</groupId>
+        <artifactId>jaxen</artifactId>
+        <version>${jaxen.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>saxpath</groupId>
+        <artifactId>saxpath</artifactId>
+        <version>${saxpath.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.belerweb</groupId>
+        <artifactId>pinyin4j</artifactId>
+        <version>${pinyin4j.version}</version>
+    </dependency>
 </dependencies>
 </project>
