--- a/etl_center/pom.xml
+++ b/etl_center/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.41</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>4.4.11</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
